# cmake-hardening

./: .gitignore  Hardening.cmake  LICENSE  README.md  ssp_shim.c
.devcontainer/: Dockerfile  devcontainer.json
tests/ffmpeg/: CMakeLists.txt  main.cpp
